feat: :sparkles: Added enchantment repo class
EnchantmentRepo made, full CRUD support on enchantment table now done using drizzle ORM.

--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "module": "index.js",
   "type": "module",
   "scripts": {
-    "start":"bun --hot run index.js"
+    "start": "bun --hot run index.js"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "drizzle-kit": "^0.20.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "drizzle-orm": "^0.29.0"
   }
 }
